fixed spacing between subheadings

--- a/style.css
+++ b/style.css
@@ -463,7 +463,7 @@
         }
     }
     /* -------------------------------------------- */
-    /* Skills Styles */
+    /* Languages Styles */
     /* -------------------------------------------- */
     
     #skills-container {
@@ -551,7 +551,7 @@
     /* REUSES SOME STYLES FROM PROJECTS */
     
     #software-container {
-        margin-top: 5em;
+        margin-top: 10em;
         border: 1px solid #e6e6e6;
     }
     
@@ -567,14 +567,14 @@
     /* -------------------------------------------- */
     /* Projects Styles */
     /* -------------------------------------------- */
-    
+
     #myBtnContainer {
         text-align: center;
         font-family: "Poppins", sans-serif;
     }
     
     body>h1 {
-        margin: 2em 0 0.5em 0;
+        margin: 1em 0 0.5em 0;
     }
     
     .row {
@@ -663,11 +663,9 @@
     /* -------------------------------------------- */
     /* REUSES SOME STYLES FROM PROJECTS */
     
-    #awards-container {
-        margin-top: 5em;
-        border: 1px solid #e6e6e6;
-    }
-    
+    #awards-certs-title{
+        margin-top: 2em;
+    }    
     .awards-box {
         margin-bottom: 3em;
     }
